--- a/draft.html
+++ b/draft.html
@@ -4,12 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Music Shop</title>
+    <script>
+    var baseurl ="http://localhost:8080/api/albumns" ;
+    function loadArtists(){
+        var xmlhttp = new XMLHttpRequest();
+        xmlhttp.open("GET",baseurl ,true);
+        xmlhttp.onreadystatechange = function () {
+           if (xmlhttp.readyState ===4 && xmlhttp.status ===200){
+               var artists = JSON.parse(xmlhttp.responseText);
+               var tbltop = `<table>
+                                <tr><th>Id</th><th>Artist Name</th><th>Genre</th><th>Albumns</th><th>Songs</th><th>Art</th><th>Price</th>`;
+                
+                var main = "";
+                for (i = 0 ; i < artists.length; i++){
+                    main += "<tr><td>"+artists[i].id+"</td><td>"+artists[i].name+"</td><td>"+artists[i].genreType+"</td><td>"+artists[i].art+"</td><td>"+artists[i].price+"</td><td>"+artists[i].albums+"</td></tr>";
+
+                }
+                var tblbottom ="</table>";
+                var tbl = tbltop + main + tblbottom ;
+                document.getElementById("artistinfo").innerHTML = tbl;
+
+
+           } 
+        };
+        xmlhttp.send();
+    }
+    window.onload = function(){
+        loadArtists();
+    }
+
+    </script>
 </head>
 <body style="background-color: bisque;">
 
     <h1>Artist - First Draft</h1>
     <h5>Testing Song Output</h5>
-    
+    <div id ="artistinfo"> </div>
 </body>
 </html>
